--- a/src/components/widget/widget.scss
+++ b/src/components/widget/widget.scss
@@ -26,7 +26,7 @@
     .link{
         width: max-content;
         font-size: 12px;
-        border-bottom: 1px solid gray;
+        // border-bottom: 1px solid gray;
     }
 
     .percentage{
