--- a/src/components/cofedalci/members/details/details.scss
+++ b/src/components/cofedalci/members/details/details.scss
@@ -1,5 +1,4 @@
 .modal{
-    display: flex;
     justify-content: center;
     align-items: center;
     position: absolute;
@@ -7,13 +6,17 @@
     left: 0;
     height: 100vh;
     width: 100vw;
-    background-color: #0000003a;
+    // background-color: #0000000a;
 
     .modal-container{
+        position: relative;
         border: 1px solid white;
         background-color: white;
-        width: 70%;
-        height: 60%;
+        width: 70vw;
+        height: 80vh;
+        border-radius: 10px;
+        -webkit-box-shadow: 2px 4px 10px 1px rgba(0,0,0, 0.47);
+        box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
 
         .close{
             display: flex;
@@ -38,7 +41,32 @@
 
             }
             .body{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
                 margin-top: 20px;
+                padding-top: 10px;
+
+                .section{
+                    color: #0000003a;
+
+
+                    .title{
+                        display: flex;
+                        flex-direction: row;
+                        align-items: center;
+                        color: black;
+                        text-decoration: underline;
+                    }
+
+                    .items{
+                        color: brown;
+
+                        .item{
+                            margin-top: 10px;
+                        }
+                    }
+                }
             }
         }
     }
