--- a/src/components/featured/featured.scss
+++ b/src/components/featured/featured.scss
@@ -4,6 +4,7 @@
     box-shadow: 2px 4px 10px 1px rgba(201, 201 , 201 , 0.47);
     padding: 10px;
 
+
     .top{
         display: flex;
         align-items: center;
@@ -25,8 +26,25 @@
         gap: 15px;
 
         .featuredChart{
-            width: 100px;
-            height: 100px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            width: 100%;
+            height: 100%;
+
+            .item{
+                width: 40%;
+
+                p{
+                    margin-top: 10px;
+                    text-align: center;
+                }
+            }
+        }
+
+        hr{
+            width: 90%;
+            border: 1px dashed gray;
         }
 
         .title{
